Alignment fix

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -223,7 +223,7 @@ timeline {
             display: block;
             font-size: 1.5vh;
             padding-left: @basepadding * 4;
-            padding-right: @basepadding * 2;
+            padding-right: @basepadding * 4;
             padding-top: @basepadding / 2;
             padding-bottom: @basepadding / 2;
             box-sizing: border-box;
@@ -262,10 +262,11 @@ timeline {
         }
 
         &.odd-1 {
-          @media screen and (min-width: @breakpoint1) {
-          }
-          @media screen and (max-width: @breakpoint1) {
-            text-align: right;
+
+          date, h3 {
+            @media screen and (max-width: @breakpoint1) {
+              text-align: right;
+            }
           }
         }
 
